Server - Adding Redis Simple Caching
