# server/app/services/room_service.ts
@@ -4,6 +4,12 @@ import { roomSchema, updateRoomSchema, handleRoomRequestSchema } from '#validato
 import { Infer } from '@vinejs/vine/types'
 import { customAlphabet } from 'nanoid'
 import { errors as authErrors } from '@adonisjs/auth'
+import {
+  clearUserRoomsCache,
+  clearRoomCache,
+  getRoomCache,
+  setRoomCache,
+} from '#services/room_cache_service'
 
 export const ID_ALPHABET = '0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz'
 
@@ -20,6 +26,10 @@ export const createRoom = async (user: User, payload: Infer<typeof roomSchema>) 
   await room.related('users').attach({
     [user.id]: { admin: true },
   })
+
+  // Flush user rooms cache and room cache just in case
+  clearUserRoomsCache([user.id])
+  await clearRoomCache(room.id)
 
   return room
 }
@@ -44,57 +54,116 @@ export const updateRoom = async (
     }, {})
   )
 
+  // Flush user rooms cache and room cache
+  await clearUserRoomsCache(payload.userIds)
+  await clearRoomCache(roomId)
+
   return await getRoom(roomId, user)
 }
 
 export const deleteRoom = async (room: Room) => {
   await room.delete()
 
+  // Flush user rooms cache
+  await clearUserRoomsCache(room.users.map((u) => u.id))
+  await clearRoomCache(room.id)
+
   return {
     message: 'Room deleted',
   }
 }
 
-export const getRoom = async (id: string, user: User) => {
-  const room = await Room.query().preload('users').preload('requests').where('id', id).firstOrFail()
-  const isUser = room.users.find((u) => u.id === user.id)
-
-  if (!isUser) {
+export const getRoomFromDb = async (id: string) => {
+  try {
+    return await Room.query().preload('users').preload('requests').where('id', id).firstOrFail()
+  } catch (error) {
     throw new authErrors.E_UNAUTHORIZED_ACCESS('Unauthorized access', {
       guardDriverName: 'access_tokens',
     })
   }
+}
 
-  const admins: User[] = room.users.filter((u) => !!u.$extras.pivot_admin)
+export const getRoom = async (id: string, user?: User) => {
+  let room: Room
 
-  return {
-    admins,
-    room,
+  try {
+    room = await getRoomCache(id)
+  } catch (error) {
+    room = await getRoomFromDb(id)
+    await setRoomCache(id, room)
   }
+
+  if (user) {
+    const isUser = room.users.find((u) => u.id === user.id)
+
+    if (!isUser) {
+      throw new authErrors.E_UNAUTHORIZED_ACCESS('Unauthorized access', {
+        guardDriverName: 'access_tokens',
+      })
+    }
+  }
+
+  return room
 }
 
 export const joinRequest = async (user: User, roomId: string) => {
-  const room = await Room.query().preload('users').preload('requests').where('id', roomId).first()
+  let room: Room | null
+
+  try {
+    room = await getRoom(roomId)
+  } catch (error) {
+    // Room not found
+    room = null
+  }
 
   if (room) {
     const userExist = room.users.find((u) => u.id === user.id)
     const requestExist = room.requests.find((u) => u.id === user.id)
 
     if (!userExist && !requestExist) {
+      // room can be parsed from cache and is not a lucid model
+      if (!room.related) {
+        room = await getRoomFromDb(roomId)
+      }
+
       await room.related('requests').attach([user.id])
+
+      // Flush room cache
+      await clearRoomCache(roomId).catch(() => null)
     }
   }
+
+  return room
 }
 
 export const leaveRoom = async (user: User, roomId: string) => {
-  const room = await Room.query().preload('users').where('id', roomId).first()
+  let room: Room | null
+
+  try {
+    room = await getRoom(roomId)
+  } catch (error) {
+    // Room not found
+    room = null
+  }
 
   if (room) {
     const userExist = room.users.find((u) => u.id === user.id)
 
     if (userExist) {
+      // room can be parsed from cache and is not a lucid model
+      if (!room.related) {
+        room = await getRoomFromDb(roomId)
+      }
+
       await room.related('users').detach([user.id])
+
+      // Flush room cache
+      await clearRoomCache(roomId).catch(() => null)
     }
+  }
+
+  return {
+    message: 'Left room',
   }
 }
 
@@ -103,20 +172,33 @@ export const handleUser = async (
   roomId: string,
   payload: Infer<typeof handleRoomRequestSchema>
 ) => {
-  const room = await Room.query()
-    .preload('users', (query) => {
-      query.pivotColumns(['admin'])
-    })
-    .preload('requests')
-    .where('id', roomId)
-    .firstOrFail()
-  simpleAuthAdminCheck(user, room)
+  let room: Room | null
 
-  const toAttach = payload.accept ?? []
-  const toDetach = payload.reject ?? []
+  try {
+    room = await getRoom(roomId)
 
-  await room.related('users').attach(toAttach)
-  await room.related('requests').detach(toDetach)
+    simpleAuthAdminCheck(user, room)
+
+    const toAttach = payload.accept ?? []
+    const toDetach = payload.reject ?? []
+
+    // room can be parsed from cache and is not a lucid model
+    if (!room.related) {
+      room = await getRoomFromDb(roomId)
+    }
+
+    await room.related('users').attach(toAttach)
+    await room.related('requests').detach(toDetach)
+
+    // Flush room cache
+    await clearRoomCache(roomId).catch(() => null)
+  } catch (error) {
+    // Room not found
+  }
+
+  return {
+    message: 'Users handled',
+  }
 }
 
 export const getRoomsOfUser = async (user: User) => {
@@ -128,7 +210,7 @@ export const getRequestRoomsOfUser = async (user: User) => {
 }
 
 export const simpleAuthAdminCheck = (user: User, room: Room) => {
-  const loggedUserIsAdmin = room.users.find((u) => u.id === user.id && u.$extras.pivot_admin)
+  const loggedUserIsAdmin = room.users.find((u) => u.id === user.id && u.isAdmin)
 
   if (!loggedUserIsAdmin) {
     throw new authErrors.E_UNAUTHORIZED_ACCESS('Unauthorized access', {
